# rustgram-client

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.bak  coverage-summary.json  crate-inventory.json  libactor_info.rlib  liberror.rlib  libmessage.rlib  module_scores.txt  phase2_output.json  plan.yaml  risk_register.yaml  test_actor.sh
.beads/: issues.jsonl  issues.jsonl.backup  issues.jsonl.backup2
.beads/artifacts/: phase2_analysis_ufz.4.json  plan_ufz.4.yaml
coverage/html/: index.html
crates/: accent-color-id  access-rights  account-manager  active-story-state  affected-history  affiliate-type  age-verification-parameters  animation-size  animations-manager  attach-menu-manager  auction-bid-level  audios-manager  auto-download-settings  autosave-manager  background-id  background-info  background-manager  background-type  base-theme  block-list-id  boost-manager  bot-command  bot-command-scope  bot-info-manager  bot-menu-button  bot-queries  bot-recommendation-manager  bot-verification  bot-verifier-settings  business-away-message  business-away-message-schedule  business-bot-manage-bar  business-bot-rights  business-chat-link  business-connected-bot  business-connection-id  business-connection-manager  business-greeting-message  business-info  business-intro  (+275 more)
crates/accent_color_id/: Cargo.toml
crates/accent_color_id/src/: lib.rs
crates/access_rights/: Cargo.toml
crates/account_manager/: Cargo.toml
crates/account_manager/src/: error.rs  lib.rs  tl.rs  types.rs
crates/active_story_state/: Cargo.toml
crates/active_story_state/src/: lib.rs
crates/actor/: Cargo.toml  IMPLEMENTATION_REPORT.json
crates/actor/src/: actor.rs  actor_id.rs  actor_info.rs  error.rs  event.rs  lib.rs  mailbox.rs  message.rs  registry.rs  response.rs  supervisor.rs
crates/actor/tests/: concurrency_tests.rs  integration_tests.rs  property_tests.rs
crates/affected_history/: Cargo.toml
crates/affiliate_type/: Cargo.toml
crates/affiliate_type/src/: lib.rs
crates/age_verification_parameters/: Cargo.toml
crates/age_verification_parameters/src/: lib.rs
crates/alarm_manager/: Cargo.toml
crates/alarm_manager/src/: lib.rs
crates/animation_size/: Cargo.toml
crates/animation_size/src/: lib.rs
crates/animations_manager/: Cargo.toml
crates/animations_manager/src/: error.rs  lib.rs  tl.rs  types.rs
crates/application/: Cargo.toml
crates/attach_menu_manager/: Cargo.toml
crates/attach_menu_manager/src/: error.rs  lib.rs  tl.rs  types.rs
crates/auction_bid_level/: Cargo.toml
crates/audios_manager/: Cargo.toml
crates/audios_manager/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth_manager/: Cargo.toml
crates/auth_manager/src/: lib.rs  network_tests.rs  state.rs
crates/auth_manager/tests/: integration_test.rs
crates/auto_download_settings/: Cargo.toml
crates/auto_download_settings/src/: lib.rs
crates/autosave_manager/: Cargo.toml
crates/autosave_manager/src/: lib.rs
crates/background_id/: Cargo.toml
crates/background_id/src/: lib.rs
crates/background_info/: Cargo.toml
crates/background_manager/: Cargo.toml
crates/background_manager/src/: lib.rs
crates/background_type/: Cargo.toml
crates/background_type/src/: lib.rs
crates/base_theme/: Cargo.toml
crates/base_theme/crates/sent_email_code/src/: lib.rs
crates/base_theme/src/: lib.rs
crates/birthdate/: Cargo.toml
crates/birthdate/src/: birthdate.rs  error.rs  lib.rs  tl.rs
crates/block_list_id/: Cargo.toml
crates/block_list_id/src/: lib.rs
crates/boost/: Cargo.toml
crates/boost_manager/: Cargo.toml
crates/boost_manager/src/: lib.rs
crates/bot_command/: Cargo.toml
crates/bot_command/src/: lib.rs
crates/bot_command_scope/: Cargo.toml
crates/bot_info_manager/: Cargo.toml
crates/bot_info_manager/src/: lib.rs
crates/bot_menu_button/: Cargo.toml
crates/bot_queries/: Cargo.toml
crates/bot_queries/src/: lib.rs
crates/bot_recommendation_manager/: Cargo.toml
crates/bot_recommendation_manager/src/: lib.rs  recommended_bots.rs
crates/bot_verification/: Cargo.toml
crates/bot_verification/src/: lib.rs
crates/buffer/: Cargo.toml
crates/buffer/src/: lib.rs
crates/business_away_message_schedule/: Cargo.toml
crates/business_away_message_schedule/src/: lib.rs
crates/business_bot_manage_bar/: Cargo.toml
crates/business_bot_manage_bar/src/: lib.rs
docs/: api-compatibility-check-results.json  birthdate-module.md  boost-module.md  connectionstate-module.md  database-layer-plan.yaml  database-layer-risk-register.yaml  paper-plane-risk-register.yaml  paper-plane-tdlib-inventory.csv  risk-register-database-layer.yaml  risk_register.yaml  rustgram-api-mapping.csv  venue-module.md
reference/: success-criteria-auth-manager.yaml  success-criteria-database-layer.yaml  success-criteria-paper-plane.yaml  success-criteria-user-manager.yaml  success-criteria.yaml
reports/: FINAL_SUMMARY.json
specs/: account_manager-spec.yaml  actor-messaging.yaml  animations_manager-spec.yaml  attach_menu_manager-spec.yaml  auth_manager_network.yaml  bot_recommendation_manager-spec.yaml  business_connection_manager-spec.yaml  business_manager-spec.yaml  database-layer.yaml  dialog-manager-network.yaml  dialog_manager_tl.yaml  epic-4yf-spec.yaml  issue_tracker.yaml  message-import-manager-spec.yaml  message_query_manager-spec.yaml  messages-manager-spec.yaml  messaging-plan.yaml  messaging-spec.yaml  paper_plane_adapter.yaml  paper_plane_adapter_mapper.yaml  paper_plane_testing.yaml  phase2-output-user_status.json  request_actor-spec.yaml  requested_dialog_type-spec.yaml  requests-spec.yaml  restriction_reason-spec.yaml  risk-register-messaging.yaml  risk_register-user_status.yaml  risk_register.yaml  rustgram-client-bt5-spec.yaml  rustgram_client_create.yaml  rustgram_client_create_dependency_matrix.yaml  rustgram_client_create_risk_register.yaml  saved_messages_manager-spec.yaml  scheduled_server_message_id-spec.yaml  scope_notification_settings-spec.yaml  secret_chat_actor-spec.yaml  secret_chats_manager-spec.yaml  secure_manager-spec.yaml  secure_storage-spec.yaml  (+8 more)
(+1359 files in other folders)
