[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["rustgram-client contributors"]
repository = "https://github.com/your-org/rustgram-client"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Protocol buffers
prost = "0.12"
prost-build = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography (for MTProto)
aes = "0.8"
rand = "0.8"
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"

# Encoding
base64 = "0.22"
hex = "0.4"

# Testing
proptest = "1.4"
criterion = "0.5"
rstest = "0.23"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
