[package]
name = "rustgram-accent-color-id"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

description = "Accent color ID type for Telegram MTProto client"

[dependencies]
rustgram-types = { path = "../types" }
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []

[lints]
rust = { unexpected-cfgs = "allow" }
clippy = { all = "deny", unwrap-used = "deny", expect-used = "deny" }

[package.metadata.docs.rs]
all-features = true
