[package]
name = "rustgram-age-verification-parameters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

description = "Age verification parameters for Telegram legal compliance"

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
