[package]
name = "rustgram-animation-size"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

description = "Animation size stub"

[dependencies]
rustgram-file-id = { path = "../file_id" }
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
