[package]
name = "rustgram-attach-menu-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Attach menu manager for Telegram attachment menu bots"

[dependencies]
# Type system
rustgram-types = { path = "../types" }
rustgram-file-id = { path = "../file_id" }
rustgram-file-source-id = { path = "../file_source-id" }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Concurrent collections
dashmap = "6.1"

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
proptest = { workspace = true }
