[package]
name = "rustgram-auto-download-settings"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["rustgram-client contributors"]
repository = "https://github.com/yourusername/rustgram-client"
description = "Auto-download settings for rustgram-client"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
