[package]
name = "rustgram-autosave-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rustgram-dialog-id = { path = "../dialog-id" }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
