[package]
name = "rustgram-background-id"
version = "0.1.0"
edition = "2021"
authors = ["rustgram-client contributors"]
license = "MIT OR Apache-2.0"
description = "Background identifier for Telegram MTProto client"
repository = "https://github.com/yourusername/rustgram-client"
keywords = ["telegram", "mtproto", "backgrounds", "chat"]
categories = ["data-structures"]

[dependencies]

[dev-dependencies]
