[package]
name = "rustgram-background-type"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

description = "Background type handling for Telegram MTProto client"
keywords = ["telegram", "mtproto", "background", "wallpaper", "chat-theme"]
categories = ["data-structures"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]

[lib]
name = "rustgram_background_type"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]
full = []
