[package]
name = "rustgram-base-theme"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

description = "Base theme types for Telegram client"

[dependencies]
# Serialization
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
