[package]
name = "rustgram-birthdate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

description = "Birthdate type for Telegram MTProto client"

[dependencies]
# Internal dependencies
rustgram-types = { path = "../types" }

# External dependencies
thiserror = { workspace = true }
tracing = { workspace = true }

# Serialization (optional)
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
# Property-based testing
proptest = { workspace = true }

[features]
default = []
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
