[package]
name = "rustgram-bot-command"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

description = "Bot command type for Telegram MTProto client"

[dependencies]
rustgram-types = { path = "../types" }
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []

[lints]
rust = { unexpected_cfgs = "allow" }
clippy = { all = "deny", unwrap_used = "deny", expect_used = "deny" }

[package.metadata.docs.rs]
all-features = true
