[package]
name = "rustgram-business-away-message-schedule"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

description = "Business away message schedule handling for Telegram MTProto client"
keywords = ["telegram", "mtproto", "business", "schedule", "away-message"]
categories = ["data-structures"]

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]

[lib]
name = "rustgram_business_away_message_schedule"
path = "src/lib.rs"

[features]
default = []
full = []
